--- a/schema/cn.styles.css
+++ b/schema/cn.styles.css
@@ -1,11 +1,10 @@
-$cn-blue: #4682b4;
-$cn-blue-light: #4f8bbd;
-$cn-red: #b94941;
-$cn-yellow: #ffca28;
-$cn-medium-grey: #474747;
-$cn-dark-grey: #2c2c2c;
-
 * {
+	--cn-blue: #4682b4;
+	--cn-blue-light: #4f8bbd;
+	--cn-red: #b94941;
+	--cn-yellow: #ffca28;
+	--cn-medium-grey: #474747;
+	--cn-dark-grey: #2c2c2c;
 	font-family: sans-serif;
 	font-size: 1.1rem;
 }
@@ -16,19 +15,18 @@ body {
 	padding: 0.5rem;
 }
 
-%cn-div-base {
+.cn-div {
 	padding: 1rem;
 	margin: 1rem;
 	background-color: var(--cn-medium-grey);
 	border-radius: 0.2rem;
 }
 
-.cn-div {
-	@extend %cn-div-base;
-}
-
 .cn-warning-div {
-	@extend %cn-div-base;
+	padding: 1rem;
+	margin: 1rem;
+	background-color: var(--cn-medium-grey);
+	border-radius: 0.2rem;
 	background-color: var(--cn-red);
 }
 
@@ -46,12 +44,12 @@ body {
 	padding: 1rem;
 	border-radius: 0.2rem;
 	border: none;
+}
 
-	&:active {
-		background-color: var(--cn-blue-light);
-	}
+.cn-button:active {
+	background-color: var(--cn-blue-light);
+}
 
-	&:focus {
-		outline: none;
-	}
+.cn-button:focus {
+	outline: none;
 }
