--- a/schema/cn.styles.css
+++ b/schema/cn.styles.css
@@ -6,7 +6,11 @@
 	--cn-medium-grey: #474747;
 	--cn-dark-grey: #2c2c2c;
 	font-family: sans-serif;
-	font-size: 1.1rem;
+	font-size: 1rem;
+}
+
+*, *:before, *:after {
+	box-sizing: border-box;
 }
 
 body {
@@ -52,4 +56,10 @@ body {
 
 .cn-button:focus {
 	outline: none;
+}
+
+.cn-text-input {
+	width: 100%;
+	padding: 0.25rem;
+	outline-color: var(--cn-blue-light);
 }
