--- a/src/styles/scss/cn.styles.scss
+++ b/src/styles/scss/cn.styles.scss
@@ -17,21 +17,25 @@
 }
 
 body {
-	background-color: color.$cn-dark;
-	color: color.$cn-light-text;
+	@include color.themed() {
+		background-color: color.theme('bg');
+		color: color.theme('text');
+	}
 	padding: 0.5rem;
 }
 
 .cn-card {
 	padding: 1rem;
 	margin: 1rem;
-	background-color: color.$cn-dark-grey;
+	@include color.themed() {
+		background-color: color.theme('card-bg');
+	}
 	border-radius: 0.2rem;
 }
 
 .cn-warning-div {
 	@extend .cn-card;
-	background-color: color.$cn-red;
+	background-color: color.$cn-alert;
 }
 
 .cn-hide {
@@ -47,30 +51,42 @@ body {
 .cn-text-input {
 	width: 100%;
 	padding: 0.25rem;
-	outline-color: color.$cn-green-light;
+	@include color.themed() {
+		// background-color: color.theme('card-bg');
+		outline-color: color.theme('primary-color-medium');
+	}
 }
 
 // Button styles
 
 .cn-button {
 	background-color: transparent;
-	border: 1px solid color.$cn-green;
-	color: color.$cn-light-text;
+
+	@include color.themed() {
+		border: 0.1em solid color.theme('primary-color');
+		color: color.theme('text');
+	}
+
 	padding: 1rem;
 	border-radius: 0.2rem;
 	cursor: pointer;
 }
 
 .cn-button:active {
-	background-color: color.$cn-green-light;
-	color: color.$cn-dark-text;
+	@include color.themed() {
+		background-color: color.theme('primary-color-medium');
+		color: color.theme('text-button-active');
+	}
 }
 
 .cn-button:focus {
 	outline: none;
 	outline-offset: 5px;
 	border-radius: 0.2rem;
-	box-shadow: 0 0 0 0.05em color.$cn-green, 0 0 0.15em 0.1em color.$cn-green;
+	@include color.themed() {
+		box-shadow: 0 0 0 0.05em color.theme('primary-color'),
+			0 0 0.15em 0.1em color.theme('primary-color');
+	}
 }
 
 // Checkbox styles
@@ -104,7 +120,11 @@ body {
 		height: 25px;
 		width: 25px;
 		border-radius: 0.2rem;
-		outline-color: color.$cn-green;
+
+		@include color.themed() {
+			outline-color: color.theme('primary-color');
+		}
+
 		transition-duration: 0.3s;
 		background-color: #eee;
 		margin: 3px;
@@ -112,7 +132,9 @@ body {
 	}
 
 	input:checked {
-		background-color: color.$cn-green;
+		@include color.themed() {
+			background-color: color.theme('primary-color');
+		}
 	}
 
 	input:checked + span::before {
@@ -127,7 +149,10 @@ body {
 
 	input:focus {
 		outline: none;
-		box-shadow: 0 0 0 0.05em color.$cn-green, 0 0 0.15em 0.1em color.$cn-green;
+		@include color.themed() {
+			box-shadow: 0 0 0 0.05em color.theme('primary-color'),
+				0 0 0.15em 0.1em color.theme('primary-color');
+		}
 	}
 }
 
@@ -145,7 +170,9 @@ body {
 }
 
 .cn-radio-wrapper:focus-within .cn-radio-label {
-	color: color.$cn-green-light;
+	@include color.themed() {
+		color: color.theme('primary-color-medium');
+	}
 }
 
 .cn-radio-label {
@@ -164,11 +191,19 @@ body {
 }
 
 .cn-radio-input input:focus + .cn-radio-control {
-	box-shadow: 0 0 0 0.05em color.$cn-green, 0 0 0.15em 0.1em color.$cn-green;
+	@include color.themed() {
+		box-shadow: 0 0 0 0.05em color.theme('primary-color'),
+			0 0 0.15em 0.1em color.theme('primary-color');
+	}
 }
 
 .radio-gradient input:checked + .cn-radio-control {
-	background: radial-gradient(color.$cn-green 50%, rgba(255, 0, 0, 0) 51%);
+	@include color.themed() {
+		background: radial-gradient(
+			color.theme('primary-color') 50%,
+			rgba(255, 0, 0, 0) 51%
+		);
+	}
 }
 
 .cn-radio-wrapper-before {
@@ -181,7 +216,11 @@ body {
 		content: '';
 		width: 0.5em;
 		height: 0.5em;
-		box-shadow: inset 0.5em 0.5em color.$cn-green;
+
+		@include color.themed() {
+			box-shadow: inset 0.5em 0.5em color.theme('primary-color');
+		}
+
 		border-radius: 50%;
 		transition: 180ms transform ease-in-out;
 		transform: scale(0);
@@ -196,6 +235,9 @@ body {
 	width: 1em;
 	height: 1em;
 	border-radius: 50%;
-	border: 0.1em solid color.$cn-green;
-	color: color.$cn-green;
+
+	@include color.themed() {
+		border: 0.1em solid color.theme('primary-color');
+		color: color.theme('text');
+	}
 }
