--- a/resources/styles/scss/_colors.scss
+++ b/resources/styles/scss/_colors.scss
@@ -1,33 +1,41 @@
 // Base Colors -  Blue Jeans
 $cn-blue: #5dadec;
-$cn-blue-medium: #76bbef;
+$cn-blue-secondary: #4974d6;
+$cn-blue-tertiary: #49bed6;
 $cn-blue-complementary: #ec9c5f;
 $cn-blue-dark: #00416a; // Indigo Dye
-$cn-blue-very-dark: #000e17;
+$cn-blue-dark-secondary: #073282;
+$cn-blue-dark-tertiary: #077382;
 $cn-blue-dark-complementary: #6b2900;
 
 // Base Colors -  Lime Green
 $cn-green: #32cd32;
-$cn-green-medium: #4fd44f;
+$cn-green-secondary: #2be35f;
+$cn-green-tertiary: #6be32b;
 $cn-green-complementary: #cd32cd;
 $cn-green-dark: #014421; // Forest Green Traditional;
-$cn-green-very-dark: #040f04;
+$cn-green-dark-secondary: #045c47;
+$cn-green-dark-tertiary: #045c15;
 $cn-green-dark-complementary: #460125;
 
 // Base Colors -  Deep Saffron
 $cn-orange: #ff9933;
-$cn-orange-medium: #ffaf5f;
+$cn-orange-secondary: #e89e23;
+$cn-orange-tertiary: #e86923;
 $cn-orange-complementary: #3399ff;
 $cn-orange-dark: #693600; // Sepia
-$cn-orange-very-dark: #170c00;
+$cn-orange-dark-secondary: #805406;
+$cn-orange-dark-tertiary: #803306;
 $cn-orange-dark-complementary: #00346b;
 
 // Base Colors -  Thistle
 $cn-violet: #d8bfd8;
-$cn-violet-medium: #e1cde1;
+$cn-violet-secondary: #f0c7db;
+$cn-violet-tertiary: #e5c7f0;
 $cn-violet-complementary: #c0d8c0;
 $cn-violet-dark: #6c3082; // Eminence
-$cn-violet-very-dark: #170a1c;
+$cn-violet-dark-secondary: #993198;
+$cn-violet-dark-tertiary: #613199;
 $cn-violet-dark-complementary: #468230;
 
 // Warning and Attention Colors
@@ -37,7 +45,7 @@ $cn-warn: #ffca28;
 // Dark Colors
 $cn-dark: #1b1b1b;
 $cn-light-grey: #7d7d7d;
-$cn-medium-grey: #474747;
+$cn-secondary-grey: #474747;
 $cn-dark-grey: #2c2c2c;
 
 // Text Colors
@@ -49,91 +57,99 @@ $cn-dark-text-2: #2a2a2a;
 $themes: (
 	default: (
 		bg: $cn-dark,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-light-text,
 		text-secondary: $cn-light-text-2,
 		text-button: $cn-light-text,
 		text-button-active: $cn-dark-text,
 		primary-color: $cn-blue,
-		primary-color-medium: $cn-blue-medium,
-		secondary-color: $cn-blue-complementary,
+		secondary-color: $cn-blue-secondary,
+		tertiary-color: $cn-blue-tertiary,
+		complementary-color: $cn-blue-complementary,
 	),
 	light: (
 		bg: white,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-dark-text,
 		text-secondary: $cn-dark-text-2,
 		text-button: $cn-dark-text,
 		text-button-active: $cn-light-text,
 		primary-color: $cn-blue-dark,
-		primary-color-medium: $cn-blue-very-dark,
-		secondary-color: $cn-blue-dark-complementary,
+		secondary-color: $cn-blue-dark-secondary,
+		tertiary-color: $cn-blue-dark-tertiary,
+		complementary-color: $cn-blue-dark-complementary,
 	),
 	cn-green: (
 		bg: $cn-dark,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-light-text,
 		text-secondary: $cn-light-text-2,
 		text-button: $cn-light-text,
 		text-button-active: $cn-dark-text,
 		primary-color: $cn-green,
-		primary-color-medium: $cn-green-medium,
-		secondary-color: $cn-green-complementary,
+		secondary-color: $cn-green-secondary,
+		tertiary-color: $cn-green-tertiary,
+		complementary-color: $cn-green-complementary,
 	),
 	cn-green-light: (
 		bg: white,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-dark-text,
 		text-secondary: $cn-dark-text-2,
 		text-button: $cn-dark-text,
 		text-button-active: $cn-light-text,
 		primary-color: $cn-green-dark,
-		primary-color-medium: $cn-green-very-dark,
-		secondary-color: $cn-green-dark-complementary,
+		secondary-color: $cn-green-dark-secondary,
+		tertiary-color: $cn-green-dark-tertiary,
+		complementary-color: $cn-green-dark-complementary,
 	),
 	cn-orange: (
 		bg: $cn-dark,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-light-text,
 		text-secondary: $cn-light-text-2,
 		text-button: $cn-light-text,
 		text-button-active: $cn-dark-text,
 		primary-color: $cn-orange,
-		primary-color-medium: $cn-orange-medium,
-		secondary-color: $cn-orange-complementary,
+		secondary-color: $cn-orange-secondary,
+		tertiary-color: $cn-orange-tertiary,
+		complementary-color: $cn-orange-complementary,
 	),
 	cn-orange-light: (
 		bg: white,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-dark-text,
 		text-secondary: $cn-dark-text-2,
 		text-button: $cn-dark-text,
 		text-button-active: $cn-light-text,
 		primary-color: $cn-orange-dark,
-		primary-color-medium: $cn-orange-very-dark,
-		secondary-color: $cn-orange-dark-complementary,
+		secondary-color: $cn-orange-dark-secondary,
+		tertiary-color: $cn-orange-dark-tertiary,
+		complementary-color: $cn-orange-dark-complementary,
 	),
 	cn-violet: (
 		bg: $cn-dark,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-light-text,
 		text-secondary: $cn-light-text-2,
 		text-button: $cn-light-text,
 		text-button-active: $cn-dark-text,
 		primary-color: $cn-violet,
-		primary-color-medium: $cn-violet-medium,
-		secondary-color: $cn-violet-complementary,
+		secondary-color: $cn-violet-secondary,
+		tertiary-color: $cn-violet-tertiary,
+		complementary-color: $cn-violet-complementary,
 	),
 	cn-violet-light: (
 		bg: white,
-		card-bg: $cn-medium-grey,
+		card-bg: $cn-secondary-grey,
 		text: $cn-dark-text,
 		text-secondary: $cn-dark-text-2,
 		text-button: $cn-dark-text,
 		text-button-active: $cn-light-text,
 		primary-color: $cn-violet-dark,
-		primary-color-medium: $cn-violet-very-dark,
-		secondary-color: $cn-violet-dark-complementary,
+		secondary-color: $cn-violet-dark-secondary,
+		tertiary-color: $cn-violet-dark-tertiary,
+		complementary-color: $cn-violet-dark-complementary,
 	),
 );
 
