added color schemes for ionic

--- a/resources/styles/scss/_colors.scss
+++ b/resources/styles/scss/_colors.scss
@@ -44,8 +44,8 @@ $cn-warn: #ffca28;
 
 // Dark Colors
 $cn-dark: #1b1b1b;
-$cn-light-grey: #7d7d7d;
-$cn-secondary-grey: #474747;
+$cn-light-grey: #f4f5f8;
+$cn-medium-grey: #92949c;
 $cn-dark-grey: #2c2c2c;
 
 // Text Colors
